unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__DML_Failed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>rh2__DML_Failed_Record_Ids__c</fullName>
    <description>The record IDs, if any, of the failed records recorded from a DMLException.</description>
    <label>DML Failed Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>