unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>rh2__Exception_Stack_Trace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>