unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>rh2__Exception_Type__c</fullName>
    <description>The type of exception recorded.  If it's of a common type, that will be recorded so troubleshooting steps may be provided.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>