unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Last_Retry_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>rh2__Last_Retry_Run_Time__c</fullName>
    <label>Last Retry Run Time</label>
    <type>DateTime</type>
</CustomField>