unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Number_of_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>rh2__Number_of_Occurrences__c</fullName>
    <label>Number of Occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>