unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Object__c.field-meta.xml
<CustomField>
    <fullName>rh2__Object__c</fullName>
    <inlineHelpText>The object that experienced the Rollup Helper exception.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>