unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Record_Link__c.field-meta.xml
<CustomField>
    <fullName>rh2__Record_Link__c</fullName>
    <formula>HYPERLINK( rh2__Record_Id__c, rh2__Record_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>