unpackaged/main/default/objects/rh2__PS_Exception__c/fields/rh2__Rollup_Link__c.field-meta.xml
<CustomField>
    <fullName>rh2__Rollup_Link__c</fullName>
    <formula>IF(!ISBLANK(rh2__Rollup_Name__c), HYPERLINK("/apex/PS_RollupType?s=" &amp;  rh2__Rollup_Name__c, "Link to the Rollup"), 'No rollup link available.')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rollup Link</label>
    <type>Text</type>
</CustomField>